--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>TC Válida_PilyBernal</title>
-    <link rel="stylesheet" href="style.css">
-  </head> 
-  <body>
 
-    <header>
-      <div class="LOGO">
-        <img src="./IMAGENES/LOGO.png" alt="miLogo">
-        <h2 class="nombreEmpresa">CAFETERÍA P_B</h2>
-      </div>
-      <nav>
-        <a href="" class="nav-link">Registrarse</a>
-        <a href="" class="nav-link">Armar_desayuno</a>
-        <a href="" class="nav-link">Validar_TC</a>
-      </nav>
-    </header>
+<head>
+  <meta charset="utf-8">
+  <title>TC Válida_PilyBernal</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+  <header>
+    <div class="LOGO">
+      <img src="./IMAGENES/LOGO.png" alt="miLogo">
+      <h2 class="nombreEmpresa">CAFETERÍA P_B</h2>
+    </div>
+    <nav>
+      <a href="" class="nav-link">Registrarse</a>
+      <a href="" class="nav-link">Armar_desayuno</a>
+      <a href="" class="nav-link">Validar_TC</a>
+    </nav>
+  </header>
 
   <div class="textos">
 
@@ -26,59 +28,60 @@
     <h1>VALIDACIÓN DE TARJETA DE CRÉDITO_PB</h1>
 
     <br><br><br><br>
-  
-<div class="descripcion" id = "descripcion">
-    <p1>Al proporcionar el número de tu Tarjeta de Crédito, se validará mediante el Algoritmo de Luhn</p1>
-</div>
+
+    <div class="descripcion" id="descripcion">
+      <p1>Al proporcionar el número de tu Tarjeta de Crédito, se validará mediante el Algoritmo de Luhn</p1>
+    </div>
 
     <br><br><br>
 
-<div class="numero" id = "numero">
-  <p5>La Tarjeta de Crédito:</p5>
-</div>
+    <div class="numero" id="numero">
+      <p5>La Tarjeta de Crédito:</p5>
+    </div>
 
-<div class="ingreso" id = "ingreso">
-  <p2>Ingresa el número de la tarjeta de crédito que deseas validar</p2>
-</div>
+    <div class="ingreso" id="ingreso">
+      <p2>Ingresa el número de la tarjeta de crédito que deseas validar</p2>
+    </div>
+
+    <br><br>
+
+  </div>
+
+  <div class="inp" id="cuadros"> 
+
+    <input type="text" name="d1" id="dig1" size=" 1" tabindex="1" maxlength="1" autofocus>
+    <input type="text" name="d2" id="dig2" size=" 1" tabindex="1" maxlength="1">
+    <input type="text" name="d3" id="dig3" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d4" id="dig4" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d5" id="dig5" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d6" id="dig6" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d7" id="dig7" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d8" id="dig8" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d9" id="dig9" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d10" id="dig10" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d11" id="dig11" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d12" id="dig12" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d13" id="dig13" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d14" id="dig14" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d15" id="dig15" size="1" tabindex="1" maxlength="1">
+    <input type="text" name="d16" id="dig16" size="1" tabindex="1" maxlength="1">
+
+  </div>
 
   <br><br>
 
-  </div>
-
-  <div class="inp">
-
-    <input type="text" name="d1"  id="dig1"  autofocus>
-    <input type="text" name="d2"  id="dig2">
-    <input type="text" name="d3"  id="dig3">
-    <input type="text" name="d4"  id="dig4">
-    <input type="text" name="d5"  id="dig5">
-    <input type="text" name="d6"  id="dig6">
-    <input type="text" name="d7"  id="dig7">
-    <input type="text" name="d8"  id="dig8">
-    <input type="text" name="d9"  id="dig9">
-    <input type="text" name="d10"  id="dig10">
-    <input type="text" name="d11"  id="dig11">
-    <input type="text" name="d12"  id="dig12">
-    <input type="text" name="d13"  id="dig13">
-    <input type="text" name="d14"  id="dig14">
-    <input type="text" name="d15"  id="dig15">
-    <input type="text" name="d16"  id="dig16" size="1" tabindex="1" maxlength="1"> 
-
-</div>
-
-<br><br>
-
-  <div class="valida" id = "letreroValida">
+  <div class="valida" id="letreroValida">
     <p3>es válida</p3>
   </div>
 
-  <div class="valida" id = "letreroInvalida">
+  <div class="valida" id="letreroInvalida">
     <p4>es inválida</p4>
-  </div>  
+  </div>
 
-   <br><br><br><br><br> 
+  <br><br><br><br><br>
+  <footer>PILY BERNAL / Laboratoria-MX013</footer>
+  <script src="index.js" type="module"></script>
 
-    <script src="index.js" type="module"></script>
-    <footer>PILY BERNAL / Laboratoria-MX013</footer>
-  </body>
+</body>
+
 </html>
